chore: Add page generator, general restyling

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,3 +14,10 @@ a {
 * {
   box-sizing: border-box;
 }
+
+code {
+  background: #d1d1d1;
+  font-family: 'Menlo', monospace;
+  padding: 1em;
+  border-radius: 6px;
+}
