chore: Update default components

--- a/templates/Page/Page.tsx.hbs
+++ b/templates/Page/Page.tsx.hbs
@@ -1,6 +1,7 @@
 import styles from '@styles/Page.module.scss';
 import Head from 'next/head';
 import Image from 'next/image';
+import React from 'react';
 
 export default function About() {
 return (
