--- a/templates/Component/Component.tsx.hbs
+++ b/templates/Component/Component.tsx.hbs
@@ -1,11 +1,14 @@
-import React from 'react'; import styles from './{{pascalCase
-  name
-}}.module.scss'; type
-{{pascalCase name}}Props = { children?: React.ReactNode; } export const
-{{pascalCase name}}
-= ({children}:
-{{pascalCase name}}Props) => { return (
-<div className="{styles.root}">
-  {children}
-</div>
-); };
+import React from 'react';
+import styles from './{{pascalCase name}}.module.scss';
+
+type {{pascalCase name}}Props = {
+  children?: React.ReactNode;
+}
+
+export const {{pascalCase name}} = ({children}: {{pascalCase name}}Props) => {
+  return (
+    <div className="{styles.root}">
+      {children}
+    </div>
+  );
+};
