chore: Fix hbs Component template formatting

--- a/templates/Component/Component.tsx.hbs
+++ b/templates/Component/Component.tsx.hbs
@@ -7,7 +7,7 @@ type {{pascalCase name}}Props = {
 
 export const {{pascalCase name}} = ({children}: {{pascalCase name}}Props) => {
   return (
-    <div className="{styles.root}">
+    <div className={styles.root}>
       {children}
     </div>
   );
