--- a/templates/Component/Component.tsx.hbs
+++ b/templates/Component/Component.tsx.hbs
@@ -1,11 +1,10 @@
-import React from 'react';
 import styles from './{{pascalCase name}}.module.scss';
 
 type {{pascalCase name}}Props = {
   children?: React.ReactNode;
 }
 
-export const {{pascalCase name}} = ({children}: {{pascalCase name}}Props) => {
+export const {{pascalCase name}} = ({children}: {{pascalCase name}}Props): React.ReactElement => {
   return (
     <div className={styles.root}>
       {children}
