--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,15 +1,3 @@
-$amaranth-red: #d9042eff;
-$orange-yellow: #f8c13aff;
-$paradise-pink: #ed3369ff;
-$steel-blue: #4783c7ff;
-$mystic-maroon: #ac447dff;
-$rich-black-fogra-29: #0e111aff;
-$cultured: #f4f4f5ff;
-
-$theme-sizes: (
-  "small": 0.75rem,
-  "medium": 1rem,
-  "large": 1.5rem,
-  "xlarge": 2rem,
-  "xxlarge": 3rem,
-);
+$silver: #e5e5e5;
+$gold: #e9c46a;
+$dark: #323232;
