--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,3 +1,7 @@
 $silver: #e5e5e5;
 $gold: #e9c46a;
 $dark: #323232;
+
+$sansFont: 'Source Sans Pro', serif;
+$serifFont: 'Playfair Display', sans-serif;
+$codeFont: 'Menlo', monospace;
