refactor(plop): Update plop templates
Fixes #16

--- a/templates/Component/ComponentSingle.tsx.hbs
+++ b/templates/Component/ComponentSingle.tsx.hbs
@@ -1,5 +1,4 @@
 import {Box, Flex, Text} from '@chakra-ui/react';
-import styles from './{{pascalCase name}}.module.scss';
 
 type {{pascalCase name}}Props = {
   children?: React.ReactNode;
@@ -7,7 +6,7 @@ type {{pascalCase name}}Props = {
 
 export const {{pascalCase name}} = ({children}: {{pascalCase name}}Props): React.ReactElement => {
   return (
-    <Box className={styles.root}>
+    <Box>
       {children}
     </Box>
   );
