--- a/templates/Component/ComponentSingle.tsx.hbs
+++ b/templates/Component/ComponentSingle.tsx.hbs
@@ -4,9 +4,9 @@ type {{pascalCase name}}Props = {
   children?: React.ReactNode;
 }
 
-export const {{pascalCase name}} = ({children}: {{pascalCase name}}Props): React.ReactElement => {
+export const {{pascalCase name}} = ({children, ...rest}: {{pascalCase name}}Props): React.ReactElement => {
   return (
-    <Box>
+    <Box{...rest}>
       {children}
     </Box>
   );
